--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
-    
+
+    <!-- intestazione -->
+    <header></header>
+    <!-- /intestazione -->
+
+    <!-- corpo pagina -->
+    <main></main>
+    <!-- /corpo pagina -->
+
+    <!-- pie di pagina -->
+    <footer></footer>
+    <!-- /pie di pagina -->
+
 </body>
 </html>
