aggiunte immagini sezione header

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Booleaner</title>
 
     <link rel="stylesheet" href="css/style.css">
 
@@ -12,7 +12,11 @@
 <body>
 
     <!-- intestazione -->
-    <header></header>
+    <header>
+        <div class="headerbg">
+            <img class="logo1" src="images/logo.svg" alt="the booleaner logo">
+        </div>    
+    </header>
     <!-- /intestazione -->
 
     <!-- corpo pagina -->
