aggiunto titolo + autore con stile css

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
     <!-- /intestazione -->
 
     <!-- corpo pagina -->
-    <main></main>
+    <main class="container">
+        <h1 class="title">Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+        <div>
+            <span class="testo1">Scritto da </span><a href="www.google.it">The Booleaner</a>
+        </div>
+    </main>
     <!-- /corpo pagina -->
 
     <!-- pie di pagina -->
