--- a/index.html
+++ b/index.html
@@ -21,10 +21,23 @@
 
     <!-- corpo pagina -->
     <main class="container">
+
+        <!-- titolo con immagini -->
         <h1 class="title">Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-        <div>
-            <span class="testo1">Scritto da </span><a href="www.google.it">The Booleaner</a>
+        <div class="testo1">
+            Scritto da <a href="www.google.it">The Booleaner</a>
         </div>
+        <div class="testo2">
+            il 10/10/2020
+        </div>
+        
+        <div>
+            <img class="image1" src="images/tim-1.jpg" alt="tim immagine 1">
+            <img class="image2" src="images/tim-2.jpg" alt="tim immagine 2">
+        </div>
+        <!-- /titolo con immagini -->
+
+        
     </main>
     <!-- /corpo pagina -->
 
