aggiunto paragrafo + ul con css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,13 +10,14 @@
     <link rel="stylesheet" href="css/style.css">
 
 </head>
+
 <body>
 
     <!-- intestazione -->
     <header>
         <div class="headerbg">
             <img class="logo1" src="images/logo.svg" alt="the booleaner logo">
-        </div>    
+        </div>
     </header>
     <!-- /intestazione -->
 
@@ -30,14 +32,39 @@
         <div class="testo2">
             il 10/10/2020
         </div>
-        
+
         <div>
             <img class="image1" src="images/tim-1.jpg" alt="tim immagine 1">
             <img class="image2" src="images/tim-2.jpg" alt="tim immagine 2">
         </div>
         <!-- /titolo con immagini -->
 
-        
+        <!-- dettaglio sotto immagini -->
+        <div>
+            <span>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</span>
+        </div>
+        <div>
+            <span>2nd Photo: Wikimedia, by Paul Clarke</span>
+        </div>
+        <!-- /dettaglio sotto immagini -->
+
+        <p>Lorem ipsum dolor sit amet. Ad dolorem odio ut praesentium facere sed vero cumque ut harum numquam est velit
+            consequatur hic eius minus. Et nisi blanditiis non nulla officia ut quasi autem nam animi officia qui facere
+            pariatur qui aliquid recusandae in perspiciatis labore! Est quaerat reprehenderit non amet ipsam non natus
+            accusantium nam earum enim qui excepturi consequatur sed delectus galisum. Et fuga impedit quo quis
+            architecto ea blanditiis dolores id eligendi deserunt quo doloremque autem et Quis voluptatum non
+            praesentium saepe.
+            Est tempora maxime eum voluptatem nesciunt ut ratione sapiente ex nostrum expedita quo voluptas internos aut
+            voluptatibus mollitia id molestiae laborum. Qui voluptas laudantium est unde saepe aut excepturi delectus et
+            sunt labore. Sit adipisci deserunt qui dolores voluptatem et laudantium ipsa.
+        </p>    
+
+        <ul class="list1">
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore nemo et distinctio inventore nobis beatae incidunt error dicta, voluptatibus ducimus laudantium illo modi quos amet maxime minus a tempore esse?</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quos ratione accusantium nisi architecto possimus iste. Reiciendis voluptas ut dolore, non quasi repellat fugit excepturi recusandae blanditiis numquam nam veniam?</li>
+            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis iste repudiandae sed doloremque quibusdam quod recusandae ullam cumque cum, placeat, minus voluptates voluptatum, aliquid dolorem molestias eum perspiciatis repellat repellendus?</li>
+        </ul>
+
     </main>
     <!-- /corpo pagina -->
 
@@ -46,4 +73,5 @@
     <!-- /pie di pagina -->
 
 </body>
+
 </html>
