aggiunta table + css

--- a/index.html
+++ b/index.html
@@ -65,6 +65,48 @@
             <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis iste repudiandae sed doloremque quibusdam quod recusandae ullam cumque cum, placeat, minus voluptates voluptatum, aliquid dolorem molestias eum perspiciatis repellat repellendus?</li>
         </ul>
 
+        <div>
+            <table class="table">
+                <thead class="t1">
+                    <th>Lorem ipsus dolor</th>
+                    <th>Lorem ipsus dolor</th>
+                    <th>Lorem ipsus dolor</th>
+                </thead>
+                <tbody class="tbgc">
+                    <td class="t2">Lorem ipsus dolor</td>
+                    <td class="t2">Lorem ipsus dolor</td>
+                    <td>Lorem ipsum dolor sit amet. Ad dolorem odio ut praesentium facere sed vero cumque ut harum numquam est velit
+                        consequatur hic eius minus. Et nisi blanditiis non nulla officia ut quasi autem nam animi officia qui facere
+                        pariatur qui aliquid recusandae in perspiciatis labore!</td>
+                </tbody>
+                <tbody>
+                    <td class="t2">Lorem ipsus dolor</td>
+                    <td class="t2">Lorem ipsus dolor</td>
+                    <td>Lorem ipsum dolor sit amet. Ad dolorem odio ut praesentium facere sed vero cumque ut harum numquam est velit
+                        consequatur hic eius minus. Et nisi blanditiis non nulla officia ut quasi autem nam animi officia qui facere
+                        pariatur qui aliquid recusandae in perspiciatis labore!</td>
+                </tbody>
+                <tbody class="tbgc">
+                    <td class="t2">Lorem ipsus dolor</td>
+                    <td class="t2">Lorem ipsus dolor</td>
+                    <td>Lorem ipsum dolor sit amet. Ad dolorem odio ut praesentium facere sed vero cumque ut harum numquam est velit
+                        consequatur hic eius minus. Et nisi blanditiis non nulla officia ut quasi autem nam animi officia qui facere
+                        pariatur qui aliquid recusandae in perspiciatis labore!</td>
+                </tbody>
+            </table>
+
+            <p>Lorem ipsum dolor sit amet. Ad dolorem odio ut praesentium facere sed vero cumque ut harum numquam est velit
+                consequatur hic eius minus. Et nisi blanditiis non nulla officia ut quasi autem nam animi officia qui facere
+                pariatur qui aliquid recusandae in perspiciatis labore! Est quaerat reprehenderit non amet ipsam non natus
+                accusantium nam earum enim qui excepturi consequatur sed delectus galisum. Et fuga impedit quo quis
+                architecto ea blanditiis dolores id eligendi deserunt quo doloremque autem et Quis voluptatum non
+                praesentium saepe.
+                Est tempora maxime eum voluptatem nesciunt ut ratione sapiente ex nostrum expedita quo voluptas internos aut
+                voluptatibus mollitia id molestiae laborum. Qui voluptas laudantium est unde saepe aut excepturi delectus et
+                sunt labore. Sit adipisci deserunt qui dolores voluptatem et laudantium ipsa.
+            </p>  
+        </div>
+
     </main>
     <!-- /corpo pagina -->
 
