aggiunto testo immagini footer + sottolineato p corpo

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
         <p>Lorem ipsum dolor sit amet. Ad dolorem odio ut praesentium facere sed vero cumque ut harum numquam est velit
             consequatur hic eius minus. Et nisi blanditiis non nulla officia ut quasi autem nam animi officia qui facere
-            pariatur qui aliquid recusandae in perspiciatis labore! Est quaerat reprehenderit non amet ipsam non natus
-            accusantium nam earum enim qui excepturi consequatur sed delectus galisum. Et fuga impedit quo quis
+            pariatur qui aliquid recusandae <mark>perspiciatis labore! Est quaerat reprehenderit non amet ipsam non natus
+            accusantium nam </mark> earum enim qui excepturi consequatur sed delectus galisum. Et fuga impedit quo quis
             architecto ea blanditiis dolores id eligendi deserunt quo doloremque autem et Quis voluptatum non
             praesentium saepe.
             Est tempora maxime eum voluptatem nesciunt ut ratione sapiente ex nostrum expedita quo voluptas internos aut
@@ -101,8 +101,8 @@
         <p>Lorem ipsum dolor sit amet. Ad dolorem odio ut praesentium facere sed vero cumque ut harum numquam est velit
             consequatur hic eius minus. Et nisi blanditiis non nulla officia ut quasi autem nam animi officia qui facere
             pariatur qui aliquid recusandae in perspiciatis labore! Est quaerat reprehenderit non amet ipsam non natus
-            accusantium nam earum enim qui excepturi consequatur sed delectus galisum. Et fuga impedit quo quis
-            architecto ea blanditiis dolores id eligendi deserunt quo doloremque autem et Quis voluptatum non
+            accusantium nam earum enim <mark> qui excepturi consequatur sed delectus galisum. Et fuga impedit quo quis
+            architecto ea blanditiis dolores id eligendi deserunt quo doloremque autem </mark> et Quis voluptatum non
             praesentium saepe.
             Est tempora maxime eum voluptatem nesciunt ut ratione sapiente ex nostrum expedita quo voluptas internos aut
             voluptatibus mollitia id molestiae laborum. Qui voluptas laudantium est unde saepe aut excepturi delectus et
@@ -114,17 +114,17 @@
     <!-- /corpo pagina -->
 
     <!-- pie di pagina -->
-    <footer>
+    <footer class="container">
         
         <!-- prima immagine -->
         <div class="picture1">
-
+            <span class="t1footer">Lorem ipsus dolor</span>
         </div>
         <!-- /prima immagine -->
             
         <!-- seconda immagine -->
         <div class="picture2">
-
+            <span class="t1footer">Lorem ipsus dolor</span>
         </div>
         <!-- /seconda immagine -->
 
